[package]
name = "esb"
version = "0.0.1"
authors = ["thalesfragoso <thales.fragosoz@gmail.com>", "James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf51 = { version = "0.9.0", optional = true }
nrf52810-pac = { version = "0.9.0", optional = true }
nrf52832-pac = { version = "0.9.0", optional = true }
nrf52840-pac = { version = "0.9.0", optional = true }
log = { version = "0.4.8", optional = true }

[dependencies.bbqueue]
version = "0.4.4"
default-features = false

[features]
51 = ["nrf51", "bbqueue/thumbv6"]
52810 = ["nrf52810-pac", "bbqueue/atomic"]
52832 = ["nrf52832-pac", "bbqueue/atomic"]
52840 = ["nrf52840-pac", "bbqueue/atomic"]
