[package]
name = "esb"
version = "0.0.1"
edition = "2018"
description = "Implementation of Nordic's Enhanced ShockBurst communication protocol"

authors = [
    "Thales Fragoso <thales.fragosoz@gmail.com>",
    "James Munns <james.munns@ferrous-systems.com>"
]

repository = "https://github.com/thalesfragoso/esb"
documentation = "https://docs.rs/esb"
readme = "README.md"

categories = ["embedded", "no-std"]
keywords = ["arm", "cortex-m", "nrf", "radio", "communication"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["52832"]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
nrf51 = { version = "0.9.0", optional = true }
nrf52810-pac = { version = "0.9.0", optional = true }
nrf52832-pac = { version = "0.9.0", optional = true }
nrf52840-pac = { version = "0.9.0", optional = true }
log = { version = "0.4.8", optional = true }

[dependencies.bbqueue]
version = "0.4.5"
default-features = false

[features]
fast-ru = []
51 = ["nrf51", "bbqueue/thumbv6"]
52810 = ["nrf52810-pac", "bbqueue/atomic"]
52832 = ["nrf52832-pac", "bbqueue/atomic"]
52840 = ["nrf52840-pac", "bbqueue/atomic"]
